added a new banner for readme and added rob command

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"prefix": "?",
-	"owner": ["Your Id"],
+	"owner": ["847030527822266378"],
 	"channel": "Optional Channel I'd",
 	"invitelink": "bot invite link",
 	"server": "server link",
