--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Economy bot created with quick.eco package in discord.js",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "RLX",
   "license": "",
